[lib]
crate-type = ["cdylib"]

[package]
name = "password-audit-api"
version = "0.1.0"
edition = "2024"

[dependencies]
worker = "0.7"

zxcvbn = "3.1"

hex = "0.4"
sha1 = "0.11"
sha2 = "0.11"
web-sys = {version = "0.3", features = ["Crypto"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

zeroize = "1.8"